# z80-board-utilities

./: CMakeLists.txt  README.md
cmake/: FindLibUSB.cmake
cmd/: CMakeLists.txt  z80-board-util.cpp
gui/: CMakeLists.txt  update-ts.bat  update-ts.sh
gui/src/: z80-board-utility.cpp
gui/src/models/: SerialPortModel.cpp  SerialPortModel.h
gui/src/widgets/: BoardChooser.cpp  BoardChooser.h  Connection.cpp  Connection.h  MainWindow.cpp  MainWindow.h
gui/ui/: boardChooser.ui  connection.ui
libs/libz80board/: CMakeLists.txt  libusb.cmake
libs/libz80board/include/: CMakeLists.txt  libz80board.h
libs/libz80board/include/libz80board/: base.h  comms.h  error.h  jtag.h
libs/libz80board/src/: SerialPort.cpp  SerialPort.h  board.cpp  board.h  comms.cpp  comms_internal.h  error.cpp  error_internal.h  jam_functions.h  jtag.cpp
libs/libz80board/src/jam_player/: jamarray.c  jamarray.h  jamcomp.c  jamcomp.h  jamexec.c  jamexp.c  jamexp.h  jamexprt.h  jamheap.c  jamjtag.c  jamjtag.h  jamnote.c  jamstub.c  jamstub_z80board.cpp  jamsym.c  jamsym.h
libs/libz80board/src/libusb-wrapper/: libusbcontext.cpp  libusbcontext.h  usbdevice.cpp  usbdevice.h
libs/libz80board/src/win32/: Win32SerialPort.cpp  stringutils.cpp  stringutils.h
udev/: 99-z80-board.rules
